# asa

./: .gitignore  AdvancedLabels.sbl  Cargo.toml  Documentation.md  GameOfLife.sblx  ImportsBasic.sbl  Labels.sbl  Literals.sbl  Macro.sbl  NewMacro.sbl  Pointers.sbl  README.md  STDTest.sbl  Scopes.sbl  Snake.sbl  Sublang.md  Target.sbl  Target2.sbl  foo.txt  out.sblx  tarpaulin-report.html  temp.sbl  test.py
.github/workflows/: ci.yml  rust.yml
benches/: bench.rs
src/: args.rs  assembler.rs  codegen.rs  debugger.rs  errors.rs  feedback.rs  files.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  mem_view.rs  new_lexer.rs  parser.rs  preprocessor.rs  sanitiser.rs  scopes.rs  symbols.rs  testing.rs  tokens.rs  utils.rs
src/parser/: labels.rs  literals.rs  macros.rs  mod.rs  other.rs  statements.rs
src/runtimes/: debugger.rs  interpreter.rs  mod.rs
std/: IO.sbl  std.sbl
subleq/: CHANGELOG.md  ControlFlow.sbl  Debugger.sbl  DerefInMacroCall.sbl  Derefs.sbl  Documentation.sbl  Errortest.sbl  Example.sbl  GameOfLife.sbl  InfoTest.sbl  InlinePtr.sbl  Input.sbl  Invalid.sbl  MacroIssue.sbl  Main.sbl  Mult.sbl  Perf.sbl  Pointers.sbl  README.md  RuntimeErrortest.sbl  STDTest.sbl  ScopesAsArgs.sbl  Snake.sbl  Stacktest.sbl  Target3.sbl  Testing.sbl  Trace.sbl  WarnTest.sbl  flip.sbl  large.sbl  mostbasic copy.sbl  package.json  testing.sbl
subleq/ImportsBasicTarget/: Target2.sbl
subleq/Sublib/: ASM.sbl  Arithmetic.sbl  (+13 more)
tests/: AdvancedLabels.sbl  Fibonacci.sblx  InlineMacros.sbl  InlineMacros.sblx  Literals.sbl  Macros.sbl  Macros.sblx  Strings.sblx  end_to_end.rs
(+84 files in other folders)
