[package]
name = "asa"
version = "0.9.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Kat9-123/asa/"
keywords = ["subleq", "esolang", "assembler", "OISC"]
categories = ["compilers", "command-line-utilities"] 
readme = "README.md"
description = "Advanced Subleq Assembler. Assembles 'sublang' to subleq."

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
log = "0.4.27"
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }
unescape = "0.1.0"
once_cell = "1.18"
criterion = "0.7.0"


[[bench]]
name = "bench"
harness = false

